Add care activity done

--- a/src/app/care-plan-template/add-care-activity/add-care-activity.component.html
+++ b/src/app/care-plan-template/add-care-activity/add-care-activity.component.html
@@ -19,50 +19,50 @@
 </ion-segment>
 <div *ngIf="segmentModel === 'activity'">
     <form [formGroup]="activityForm" (ngSubmit)="addActivity()">
-        <ion-card-header [hidden]="!activityOk" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add another parameters for {{nameActivity}} </ion-card-header>
-        <ion-item [disabled]="activityOk">
+        <ion-card-header [hidden]="!activityOk" color="success" class="animate__animated animate__slideInUp animate__fast"> Adding parameters for {{nameActivity}} or add another activity</ion-card-header>
+        <ion-item>
             <ion-label position="stacked">Name</ion-label>
             <ion-input type="text" formControlName="Name" class="form-control"></ion-input>
             <div class="error" *ngIf="activityForm.controls.Name.errors && activityForm.controls.Name.touched">
                 To add Care activity please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item>
             <ion-label position="stacked">Description</ion-label>
             <ion-input type="text" formControlName="Description" class="form-control"></ion-input>
             <div class="error" *ngIf="activityForm.controls.Description.errors && activityForm.controls.Description.touched">
                 To add Care activity please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item>
             <ion-label position="stacked">Location</ion-label>
             <ion-input type="text" formControlName="Location" class="form-control"></ion-input>
             <div class="error" *ngIf="activityForm.controls.Location.errors && activityForm.controls.Location.touched">
                 To add Care activity please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item>
             <ion-label position="stacked">Outcome code</ion-label>
             <ion-input type="text" formControlName="OutcomeCode" class="form-control"></ion-input>
             <div class="error" *ngIf="activityForm.controls.OutcomeCode.errors && activityForm.controls.OutcomeCode.touched">
                 To add Care activity please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item>
             <ion-label position="stacked">Activity code</ion-label>
             <ion-input type="text" formControlName="ActivityCode" class="form-control"></ion-input>
             <div class="error" *ngIf="activityForm.controls.ActivityCode.errors && activityForm.controls.ActivityCode.touched">
                 To add Care activity please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item>
             <ion-label position="stacked">Duration</ion-label>
             <ion-input type="number" formControlName="Duration" class="form-control" id="Duration" name="Duration"></ion-input>
             <div class="error" *ngIf="activityForm.controls.Duration.errors && activityForm.controls.Duration.touched">
                 To add Care activity please fill out this field
             </div>
         </ion-item>
-        <ion-item lines="full" [disabled]="activityOk">
+        <ion-item>
             <ion-label position="stacked">Type activity</ion-label>
             <ion-select value="Medication" okText="Okay" cancelText="Dismiss" formControlName="TypeActivity">
                 <div class="error" *ngIf="activityForm.controls.TypeActivity.errors && activityForm.controls.TypeActivity.touched">
@@ -76,7 +76,7 @@
 
             </ion-select>
         </ion-item>
-        <ion-item lines="full" [disabled]="activityOk">
+        <ion-item lines="full">
             <ion-label position="stacked">Periodicity</ion-label>
             <ion-select value="draft" okText="Okay" cancelText="Dismiss" formControlName="Periodicity">
                 <div class="error" *ngIf="activityForm.controls.Periodicity.errors && activityForm.controls.Periodicity.touched">
@@ -93,42 +93,42 @@
 
         <br>
         <br>
-        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="activityOk" [disabled]="!activityForm.valid">Done</ion-button>
+        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [disabled]="!activityForm.valid">Done</ion-button>
     </form>
 </div>
 
 <div *ngIf="segmentModel === 'medication'">
     <form [formGroup]="medicationForm" (ngSubmit)="addMedication()">
-
-        <ion-item [disabled]="!activityOk">
+        <ion-card-header [hidden]="!activityOk" color="warning" class="animate__animated animate__slideInUp animate__fast">Medication for {{nameActivity}}</ion-card-header>
+        <ion-item [disabled]="!closeMedic">
             <ion-label position="stacked">Name</ion-label>
             <ion-input type="text" formControlName="Name" class="form-control"></ion-input>
             <div class="error" *ngIf="medicationForm.controls.Name.errors && medicationForm.controls.Name.touched">
                 To add medication please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeMedic">
             <ion-label position="stacked">Description</ion-label>
             <ion-input type="text" formControlName="Description" class="form-control"></ion-input>
             <div class="error" *ngIf="medicationForm.controls.Description.errors && medicationForm.controls.Description.touched">
                 To add medication please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeMedic">
             <ion-label position="stacked">Dosage</ion-label>
             <ion-input type="text" formControlName="Dosage" class="form-control"></ion-input>
             <div class="error" *ngIf="medicationForm.controls.Dosage.errors && medicationForm.controls.Dosage.touched">
                 To add medication please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeMedic">
             <ion-label position="stacked">Manufacturer</ion-label>
             <ion-input type="text" formControlName="Manufacturer" class="form-control"></ion-input>
             <div class="error" *ngIf="medicationForm.controls.Manufacturer.errors && medicationForm.controls.Manufacturer.touched">
                 To add medication please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeMedic">
             <ion-label position="stacked">Product reference</ion-label>
             <ion-input type="number" formControlName="ProductReference" class="form-control" id="ProductReference" name="ProductReference"></ion-input>
 
@@ -136,14 +136,14 @@
                 To add medication please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeMedic">
             <ion-label position="stacked">Medication code</ion-label>
             <ion-input type="text" formControlName="MedicationCode" class="form-control"></ion-input>
             <div class="error" *ngIf="medicationForm.controls.MedicationCode.errors && medicationForm.controls.MedicationCode.touched">
                 To add medication please fill out this field
             </div>
         </ion-item>
-        <ion-item lines="full" [disabled]="!activityOk">
+        <ion-item lines="full" [disabled]="!closeMedic">
             <ion-label position="stacked">Form</ion-label>
             <ion-select value="draft" okText="Okay" cancelText="Dismiss" formControlName="Form">
                 <div class="error" *ngIf="medicationForm.controls.Form.errors && medicationForm.controls.Form.touched">
@@ -159,28 +159,29 @@
         <br>
         <br>
 
-        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="!activityOk" [disabled]="!medicationForm.valid">Done</ion-button>
+        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="!closeMedic" [disabled]="!medicationForm.valid">Done</ion-button>
     </form>
     <ion-card>
     </ion-card>
 </div>
 <div *ngIf="segmentModel === 'nutritionOrder'">
     <form [formGroup]="nutritionForm" (ngSubmit)="addNutrition()">
-        <ion-item [disabled]="!activityOk">
+        <ion-card-header [hidden]="!activityOk" color="warning" class="animate__animated animate__slideInUp animate__fast">Nutrition for {{nameActivity}}</ion-card-header>
+        <ion-item [disabled]="!closeNutr">
             <ion-label position="stacked">Name</ion-label>
             <ion-input type="text" formControlName="Name" class="form-control"></ion-input>
             <div class="error" *ngIf="nutritionForm.controls.Name.errors && nutritionForm.controls.Name.touched">
                 To add nutrition please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeNutr">
             <ion-label position="stacked">Description</ion-label>
             <ion-input type="text" formControlName="Description" class="form-control"></ion-input>
             <div class="error" *ngIf="nutritionForm.controls.Description.errors && nutritionForm.controls.Description.touched">
                 To add nutrition please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="!activityOk">
+        <ion-item [disabled]="!closeNutr">
             <ion-label position="stacked">Diet code</ion-label>
             <ion-input type="text" formControlName="DietCode" class="form-control"></ion-input>
             <div class="error" *ngIf="nutritionForm.controls.DietCode.errors && nutritionForm.controls.DietCode.touched">
@@ -190,31 +191,31 @@
 
         <br>
         <br>
-        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="!activityOk" [disabled]="!nutritionForm.valid">Done</ion-button>
+        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="!closeNutr" [disabled]="!nutritionForm.valid">Done</ion-button>
     </form>
 </div>
 
 <div *ngIf="segmentModel === 'appointment'">
     <form [formGroup]="appointmentForm" (ngSubmit)="addAppointment()">
-        <ion-item [disabled]="activityOk">
+        <ion-item [disabled]="!activityOk">
             <ion-label position="stacked">Is virtual</ion-label>
             <ion-toggle formControlName="IsVirtual" class="form-control" checked="true"></ion-toggle>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item [disabled]="!activityOk">
             <ion-label position="stacked">Direction</ion-label>
             <ion-input type="text" formControlName="Direction" class="form-control"></ion-input>
             <div class="error" *ngIf="appointmentForm.controls.Direction.errors && appointmentForm.controls.Direction.touched">
                 To add appointment please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item [disabled]="!activityOk">
             <ion-label position="stacked">Description</ion-label>
             <ion-input type="text" formControlName="Description" class="form-control"></ion-input>
             <div class="error" *ngIf="appointmentForm.controls.Description.errors && appointmentForm.controls.Description.touched">
                 To add appointment please fill out this field
             </div>
         </ion-item>
-        <ion-item [disabled]="activityOk">
+        <ion-item [disabled]="!activityOk">
             <ion-label position="stacked">Reason code</ion-label>
             <ion-input type="text" formControlName="ReasonCode" class="form-control"></ion-input>
             <div class="error" *ngIf="appointmentForm.controls.ReasonCode.errors && appointmentForm.controls.ReasonCode.touched">
@@ -223,6 +224,6 @@
         </ion-item>
         <br>
         <br>
-        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="activityOk" [disabled]="!appointmentForm.valid">Done</ion-button>
+        <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="!activityOk" [disabled]="!appointmentForm.valid">Done</ion-button>
     </form>
 </div>
