--- a/src/app/tab0/tab0.page.html
+++ b/src/app/tab0/tab0.page.html
@@ -6,54 +6,84 @@
         <ion-title text-center>MoSIoT</ion-title>
         <ion-icon slot="end" src="./assets/icon/logoIOT.svg"></ion-icon>
     </ion-toolbar>
+
+    <ion-row>
+        <ion-col size="4" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-end">
+            <ion-card color="transparent" class="deviceTemplate-card">
+                <ion-img src='assets/icon/logoIOT.svg'></ion-img>
+
+            </ion-card>
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-center">
+        </ion-col>
+
+    </ion-row>
+    <ion-row>
+        <ion-col size="1" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="10" class="ion-align-self-center">
+
+            <ion-list-header>
+                <ion-label class="text-top">DOMAIN DASHBOARD</ion-label>
+            </ion-list-header>
+
+        </ion-col>
+        <ion-col size="1" class="ion-align-self-end">
+
+        </ion-col>
+
+    </ion-row>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-    <!-- 
-  <section id="dashboardSection">
-      <ion-grid>
-          <ion-row>
-              <ion-col size="4" class="ion-align-self-start" [routerLink]="['caregivers']">
-                  <ion-card color="transparent" class="nurse-card">
-                      <ion-img src='assets/icon/caregiverW.svg'></ion-img>
-                      <ion-label>Caregivers</ion-label>
-                  </ion-card>
-              </ion-col>
-              <ion-col size="4" class="ion-align-self-center" [routerLink]="['disability-profile']">
-                  <ion-card color="transparent" class="disability-card">
-                      <ion-img src='assets/icon/disabilityW.svg'></ion-img>
-                      <ion-label>Disability profile</ion-label>
-                  </ion-card>
-              </ion-col>
-              <ion-col size="4" class="ion-align-self-end" [routerLink]="['device-template']">
-                  <ion-card color="transparent" class="deviceTemplate-card">
-                      <ion-img src='assets/icon/deviceTemplateW.svg'></ion-img>
-                      <ion-label>Device template</ion-label>
-                  </ion-card>
-              </ion-col>
-          </ion-row>
-          <ion-row>
-              <ion-col size="4" class="ion-align-self-start" [routerLink]="['telemetry-data']">
-                  <ion-card text-center color="transparent" class="nurse-card">
-                      <ion-img src='assets/icon/telemetryDataW.svg'></ion-img>
-                      <ion-label>Telemetry Data</ion-label>
-                  </ion-card>
-              </ion-col>
-              <ion-col size="4" class="ion-align-self-end" [routerLink]="['/tabs/tab2']">
-                  <ion-card color="transparent" class="deviceTemplate-card" [routerLink]="['/tabs/tab2']">
-                      <ion-img src='assets/icon/disabilityBehavW.svg'></ion-img>
-                      <ion-label>Disability behavior</ion-label>
-                  </ion-card>
-              </ion-col>
-              <ion-col size="4" class="ion-align-self-center" [routerLink]="['/tabs/tab2']">
-                  <ion-card text-center color="transparent" class="vital-card">
-                      <ion-img src='assets/icon/vital.svg'></ion-img>
-                      <ion-label>Vital signal</ion-label>
-                  </ion-card>
-              </ion-col>
 
-          </ion-row>
+    <section id="dashboardSection">
+        <ion-grid>
+            <ion-row>
+                <ion-col size="6" class="ion-align-self-end" [routerLink]="['device-template']">
+                    <ion-card color="transparent" class="deviceTemplate-card">
 
-      </ion-grid>
-  </section> -->
+                        <ion-card-header>{{totalPatientprofile}}</ion-card-header>
+                        <ion-text>Patient profiles</ion-text>
+                    </ion-card>
+                </ion-col>
+
+                <ion-col size="6" class="ion-align-self-end" [routerLink]="['device-template']">
+                    <ion-card color="transparent" class="deviceTemplate-card">
+
+                        <ion-card-header>{{totalDeviceTemplate}}</ion-card-header>
+
+
+                        <ion-text>Device Templates</ion-text>
+                    </ion-card>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col size="3" class="ion-align-self-end" [routerLink]="['device-template']">
+                    <ion-card color="transparent" class="deviceTemplate-card">
+
+
+                    </ion-card>
+                </ion-col>
+                <ion-col size="6" class="ion-align-self-end" [routerLink]="['device-template']">
+                    <ion-card color="transparent" class="deviceTemplate-card">
+
+                        <ion-card-header>{{totalCarePlanTemplate}}</ion-card-header>
+                        <ion-text>Care Plan Templates</ion-text>
+                    </ion-card>
+                </ion-col>
+                <ion-col size="3" class="ion-align-self-end" [routerLink]="['device-template']">
+                    <ion-card color="transparent" class="deviceTemplate-card">
+
+
+                    </ion-card>
+                </ion-col>
+
+            </ion-row>
+
+        </ion-grid>
+    </section>
 </ion-content>
